--- a/blog.html
+++ b/blog.html
@@ -8,7 +8,7 @@ title: Blog
 <ul class="no-bullet">
   {% for post in site.posts %}
   <li>
-    <h2><a href="{{ site.baseUrl }}/{{ post.url }}">{{ post.title }}</a></h2>
+    <h2><a href="{{ site.baseurl }}/{{ post.url }}">{{ post.title }}</a></h2>
     <p>{{ post.excerpt }}</p>
   </li>
   {% endfor %}
