--- a/staff.html
+++ b/staff.html
@@ -7,7 +7,7 @@ layout: default
 <ul class="no-bullet">
   {% for author in site.authors %}
   <li>
-    <h2><a href="{{ site.baseUrl }}/{{ author.url }}">{{ author.name }}</a></h2>
+    <h2><a href="{{ site.baseurl }}/{{ author.url }}">{{ author.name }}</a></h2>
     <h3>{{ author.position }}</h3>
     <p>{{ author.content | markdownify }}</p>
   </li>
